--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ crate-type = ["cdylib","lib"]
 nih_plug = { path = "../../nih-plug-master/nih-plug-master/", features = ["assert_process_allocs"]}
 nih_plug_egui = { path = "../../nih-plug-master/nih-plug-master/nih_plug_egui" }
 once_cell = "1.18.0"
+phf = { version = "0.11.2", features = ["macros"] }
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 rodio = "0.17.1"
