--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = ["xtask"]
 crate-type = ["cdylib","lib"]
 
 [dependencies]
+hound = "3.5.0"
 # Remove the `assert_process_allocs` feature to allow allocations on the audio
 # thread in debug builds.
 
@@ -28,7 +29,9 @@ once_cell = "1.18.0"
 phf = { version = "0.11.2", features = ["macros"] }
 rand = "0.8.5"
 rand_pcg = "0.3.1"
+rfd = "0.11.4"
 rodio = "0.17.1"
+rtrb = "0.2.3"
 rubato = "0.14.1"
 
 
