--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,11 @@ nih_plug = { path = "../../nih-plug-master/nih-plug-master/", features = ["asser
 nih_plug_egui = { path = "../../nih-plug-master/nih-plug-master/nih_plug_egui" }
 once_cell = "1.18.0"
 phf = { version = "0.11.2", features = ["macros"] }
+pitch_shift = "1.0.0"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 rfd = "0.11.4"
+serde_json = "1.0.107"
 
 
 [profile.release]
