--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = ["xtask"]
 crate-type = ["cdylib","lib"]
 
 [dependencies]
+flate2 = "1.0.27"
 hound = "3.5.0"
 # Remove the `assert_process_allocs` feature to allow allocations on the audio
 # thread in debug builds.
@@ -31,12 +32,15 @@ pitch_shift = "1.0.0"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 rfd = "0.11.4"
+rmp-serde = "1.1.2"
 serde = "1.0.188"
 serde_json = "1.0.107"
 
 
 [profile.release]
-lto = "thin"
+opt-level = 3
+debug = false
+lto = "fat"
 strip = "symbols"
 
 [profile.profiling]
