Building additive gui + preset hooks + structures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ hound = "3.5.0"
 nih_plug = { path = "../../nih-plug-master/nih-plug-master/", features = ["assert_process_allocs"]}
 nih_plug_egui = { path = "../../nih-plug-master/nih-plug-master/nih_plug_egui" }
 once_cell = "1.18.0"
+parking_lot = "0.12.1"
 phf = { version = "0.11.2", features = ["macros"] }
 pitch_shift = "1.0.0"
 rand = "0.8.5"
