--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ lazy_static = "1.4.0"
 #https://github.com/robbert-vdh/nih-plug/tree/252ab3c5becabcd7d2a7a75a8ef04de37d5f8418
 nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418", features = ["assert_process_allocs"] }
 nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418"}
+num-complex = "0.4.4"
 
 num-traits = "0.2.17"
 once_cell = "1.18.0"
@@ -38,9 +39,7 @@ rfd = "0.11.4"
 rmp-serde = "1.1.2"
 serde = "1.0.188"
 serde_json = "1.0.107"
-
 tinyfiledialogs = "3.9.1"
-winapi = "0.3.9"
 
 [profile.release]
 opt-level = 3
