--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,15 +23,24 @@ lazy_static = "1.4.0"
 # Uncomment the below line to disable the on-by-default VST3 feature to remove
 # the GPL compatibility requirement
 
-#https://github.com/robbert-vdh/nih-plug/tree/252ab3c5becabcd7d2a7a75a8ef04de37d5f8418
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418", features = ["assert_process_allocs"] }
-nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418"}
-num-complex = "0.4.4"
 
+# Original
+#nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418", features = ["assert_process_allocs"] }
+#nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418"}
+
+# My branch
+nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297", features = ["assert_process_allocs"] }
+nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297" }
+
+# Local
+#nih_plug = { path = "../../nih-plug", features = ["assert_process_allocs"] }
+#nih_plug_egui = { path = "../../nih-plug/nih_plug_egui" }
+
+
+num-complex = "0.4.4"
 num-traits = "0.2.17"
 once_cell = "1.18.0"
 parking_lot = "0.12.1"
-phf = { version = "0.11.2", features = ["macros"] }
 pitch_shift = "1.0.0"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
