--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,12 @@ lazy_static = "1.4.0"
 #nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "252ab3c5becabcd7d2a7a75a8ef04de37d5f8418"}
 
 # My branch
-nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297", features = ["assert_process_allocs"] }
-nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297" }
+#nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297", features = ["assert_process_allocs"] }
+#nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "4d28fb251422bdabfc65641beedb490bdf35c297" }
+
+# My branch - new 2024
+nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "96d413756faa145dc063fc9ca609d86bc7d2e3e7", features = ["assert_process_allocs"] }
+nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "96d413756faa145dc063fc9ca609d86bc7d2e3e7" }
 
 # Local
 #nih_plug = { path = "../../nih-plug", features = ["assert_process_allocs"] }
