--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,3 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run bundler
       run: cargo xtask bundle Actuate --profile release
+    - name: Upload a Build Artifact
+    - uses: actions/upload-artifact@v4
+      with:
+        name: macos_build
+        path: target/bundled/Actuate.vst3
