--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -23,3 +23,15 @@ jobs:
         name: macos_build
         path: target/bundled/Actuate.vst3
         if-no-files-found: warn
+  build_linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Run bundler
+      run: cargo xtask bundle Actuate --profile release
+    - uses: actions/upload-artifact@v4
+      with:
+        name: macos_build
+        path: target/bundled/Actuate.vst3
+        if-no-files-found: warn
