--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: ConorMacBride/install-package@v1.1.0
       with:
         # Packages to install with apt on Linux
-        apt: x11
+        apt: libgl1-mesa-dev
     - uses: actions/checkout@v3
     - name: Run bundler
       run: cargo xtask bundle Actuate --profile release
