--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run bundler
-      run: cargo xtask bundle scrollscope --profile release
+      run: cargo xtask bundle Actuate --profile release
     - uses: actions/upload-artifact@v4
       with:
         name: macos_m1_build
@@ -26,7 +26,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run bundler
-      run: cargo xtask bundle scrollscope --profile release
+      run: cargo xtask bundle Actuate --profile release
     - uses: actions/upload-artifact@v4
       with:
         name: macos_build
