--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -2,9 +2,9 @@ name: macos_build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: '**'
   pull_request:
-    branches: [ "main" ]
+    branches: '**'
 
 env:
   CARGO_TERM_COLOR: always
