--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ nih_plug = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b
 nih_plug_egui = { git = "https://github.com/ardura/nih-plug.git", rev = "de315f902d7b5a75f80bc9d4164e4485bf2b34a1" }
 
 # egui_file fork for nih-plug/Actuate
-egui_file = { git = "https://github.com/ardura/egui_file.git", rev = "33c96389cd1c5e40c5d2ece87ef7f86a1df53cb2" }
+egui_file = { git = "https://github.com/ardura/egui_file.git", rev = "b75a8504d3008a7694708e8951cb8f226fa61007" }
+#older one 33c96389cd1c5e40c5d2ece87ef7f86a1df53cb2
 
 num-complex = "0.4.4"
 num-traits = "0.2.17"
@@ -34,6 +35,7 @@ rand_pcg = "0.3.1"
 serde = "1.0.188"
 serde_json = "1.0.107"
 dirs = "5.0.1"
+noisy_float = "0.2.0"
 
 [profile.release]
 opt-level = 3
