--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Actuate"
-version = "1.3.4"
+version = "1.3.5"
 edition = "2021"
 authors = ["Ardura <azviscarra@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -35,7 +35,7 @@ rand_pcg = "0.3.1"
 serde = "1.0.188"
 serde_json = "1.0.107"
 dirs = "5.0.1"
-noisy_float = "0.2.0"
+walkdir = "2.5.0"
 
 [profile.release]
 opt-level = 3
