--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Actuate"
-version = "1.3.6"
+version = "1.3.7"
 edition = "2021"
 authors = ["Ardura <azviscarra@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -36,6 +36,7 @@ serde = "1.0.188"
 serde_json = "1.0.107"
 dirs = "5.0.1"
 walkdir = "2.5.0"
+rayon = "1.10.0"
 
 [profile.release]
 opt-level = 3
