--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ serde_json = "1.0.107"
 dirs = "5.0.1"
 walkdir = "2.5.0"
 rayon = "1.10.0"
+zip = "2.5.0"
+anyhow = "1.0.97"
+ureq = { version = "3.0.10", features = ["json"] }
 
 [profile.release]
 opt-level = 3
