--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Actuate"
-version = "1.3.91"
+version = "1.4.0"
 edition = "2021"
 authors = ["Ardura <azviscarra@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -18,11 +18,11 @@ hound = "3.5.0"
 lazy_static = "1.4.0"
 
 # Nih plug fork for actuate
-nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51", features = ["assert_process_allocs"] }
-nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51" }
+nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "ce77d8c6daeebcdcc15e84a178ddce617ee6a3d3", features = ["assert_process_allocs"] }
+nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "ce77d8c6daeebcdcc15e84a178ddce617ee6a3d3" }
 
 # egui_file fork for nih-plug/Actuate
-egui_file = { git = "https://github.com/Ardura/egui_file.git", rev = "409258b8858ac1fb881ae2b5e40ff6d4a5cd474a" }
+egui_file = { git = "https://github.com/Barugon/egui_file.git", rev = "28a242a7e921144e9ac442cc00fad6eca01b59e6" }
 
 num-complex = "0.4.4"
 num-traits = "0.2.17"
