--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build_mac_m1:
-    runs-on: macos-latest
+    runs-on: macos-26
     steps:
     - uses: actions/checkout@v3
     - name: Run bundler
@@ -22,7 +22,7 @@ jobs:
         path: target/bundled/*
         if-no-files-found: warn
   build_macos:
-    runs-on: macos-13
+    runs-on: macos-latest-large
     steps:
     - uses: actions/checkout@v3
     - name: Run bundler
